# dvc-repo

./: Dockerfile  pyproject.toml  somefile.txt
.dvc/: config
dvc/: images.dvc
